# pylipd

./: .gitignore  .readthedocs.yml  CITATION.cff  Class proposal.ipynb  MANIFEST.in  README.md  citation.rst  config.cfg  download_and_convert_lipdverse.py  environment.yml  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: citest.yml  publish.yaml
.ipynb_checkpoints/: Class proposal-checkpoint.ipynb
docs/: Makefile  api.rst  citation.rst  conf.py  contribution_guide.rst  index.rst  installation.rst  requirements.txt  rtd_env.yml  test.lpd  tutorials.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  tutorials.doctree
docs/_build/doctrees/source/: modules.doctree  pylipd.doctree  pylipd.globals.doctree  (+2 more)
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/_build/jupyter_execute/: api.ipynb  api.py
docs/source/: modules.rst  pylipd.globals.rst  pylipd.rst  pylipd.series.rst
examples/data/: Ant-WAIS-Divide.Severinghaus.2012.lpd  MD98_2181.Stott.2007.lpd  Ocn-MadangLagoonPapuaNewGuinea.Kuhnert.2001.lpd
examples/notebooks/: oop_demo.ipynb
examples/rdf/: graph.ttl
notebooks/: Untitled.ipynb
ontology/: archive.ttl  chron_proxy.ttl  chron_units.ttl  chron_variables.ttl  core.ttl  instrument.ttl  interpretation.ttl  paleo_proxy.ttl  paleo_units.ttl  paleo_variables.ttl
paper/: paper.md
pylipd/: __init__.py  legacy_utils.py  lipd.py  lipd_series.py  lipd_to_rdf.py  multi_processing.py  rdf_graph.py  rdf_to_lipd.py  usage.py  usage_parallel.py  utils.py
pylipd/classes/: archivetype.py  calibration.py  change.py  changelog.py  chrondata.py  compilation.py  dataset.py  datatable.py  funding.py  independentvariable.py  integrationtime.py  interpretation.py  interpretationseasonality.py  interpretationvariable.py  isotopeinterpretation.py  location.py  model.py  paleodata.py  paleoproxy.py  paleoproxygeneral.py  paleounit.py  paleovariable.py  person.py  physicalsample.py  publication.py  resolution.py  uncertainty.py  variable.py
pylipd/classes/templates/: datatable.py
pylipd/data/Temp12k/: ElGygytgynCrater.Schwamborn.2006.lpd  MD03-2601.Kim.2012.lpd  NevadoHuascaran.Thompson.1995.lpd  RC24_08GC.Arbuszewski.2013.lpd  SouthernCalifornia.Ohlwein.2012.lpd
pylipd/globals/: blacklist.py  queries.py  schema.py  synonyms.json  synonyms.py  urls.py
pylipd/tests/: conftest.py  test_LiPD.py  test_LiPDClasses.py  test_LiPDSeries.py
pylipd/utils/: __init__.py  create_classes.py  dataset.py  json_to_rdf.py  legacy_utils.py  lipd_to_rdf.py  multi_processing.py  rdf_graph.py  rdf_to_json.py  rdf_to_lipd.py  utils.py
scripts/: README.md  analyze_compilations.py  convert_for_graphdb.py  download_compilations.py  preprocess_compilations.py  requirements_download.txt  upload_to_graphdb.py
src/: ExampleUsage.ipynb  globals.py  lipd.py  lipd_to_rdf.py  rdf_to_lipd.py  usage.py  utils.py
src/globals/: blacklist.py  namespaces.py  schema.py  urls.py
src/pylipd/: legacy_utils.py  lipd.py  lipd_to_rdf.py  multi_processing.py  rdf_to_lipd.py  usage.py  utils.py
src/pylipd/globals/: schema.py
(+26 files in other folders)
