[metadata]
name = pylipd
version = 0.9.6
author = Varun Ratnakar
author_email = varunratnakar@gmail.com
description= Python utilities for handling LiPD data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/linkedearth/pylipd
project_urls =
    Bug Tracker = https://github.com/linkedearth/pylipd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    rdflib
    pandas

[options.packages.find]
where = .
