[metadata]
name = pylipd
version = 1.3.7.b2
author = Varun Ratnakar, Deborah Khider
author_email = varunratnakar@gmail.com
description= Python utilities for handling LiPD data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/linkedearth/pylipd
project_urls =
    Bug Tracker = https://github.com/linkedearth/pylipd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    rdflib
    pandas
    doi2bib
    pybtex
    tqdm
    bagit
    numpy

[options.packages.find]
where = .
